--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
     "paths": {
-      "~/*": ["src/*"],
-      "@/*": ["public/*"]
+      "~/*": ["src/*"]
     }
   },
   "include": ["src"],
